// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`flee-members/BasicInformation Snapshots Default 1`] = `
<div
  class="container"
>
  <div
    class="v-card v-sheet theme--light"
  >
    <div
      class="v-card__title"
    >
      
    Basic Information
  
    </div>
     
    <hr
      class="v-divider theme--light"
    />
     
    <div
      class="layout pa-3"
    >
      <div
        class="flex xs8 pr-3"
      >
        <div
          class="layout row wrap"
        >
          <div
            class="flex xs9 pr-4"
          >
            <div
              class="mb-2 text-uppercase grey--text font-weight-bold"
            >
              
            Fleet member name
          
            </div>
             
            <div
              class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder theme--light"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-text-field__slot"
                  >
                    <input
                      placeholder="Name"
                      type="text"
                    />
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <div
                      class="v-messages__wrapper"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <div
            class="flex xs3"
          >
            <div
              class="mb-2 text-uppercase grey--text font-weight-bold"
            >
              
            Type
          
            </div>
             
            <div
              class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-select theme--light"
              role="combobox"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-select__slot"
                  >
                    <div
                      class="v-select__selections"
                    >
                      <input
                        aria-readonly="false"
                        autocomplete="on"
                        readonly="readonly"
                        type="text"
                      />
                    </div>
                    <div
                      class="v-input__append-inner"
                    >
                      <div
                        class="v-input__icon v-input__icon--append"
                      >
                        <i
                          aria-hidden="true"
                          class="v-icon material-icons theme--light"
                        >
                          arrow_drop_down
                        </i>
                      </div>
                    </div>
                  </div>
                  <div
                    class="v-menu"
                  >
                    <div
                      class="v-menu__content theme--light "
                      style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                    >
                      <div
                        class="v-select-list v-card theme--light"
                      >
                        <div
                          class="v-list theme--light"
                          role="list"
                        >
                          <div
                            role="listitem"
                          >
                            <div
                              class="v-list__tile theme--light"
                            >
                              <div
                                class="v-list__tile__content"
                              >
                                <div
                                  class="v-list__tile__title"
                                >
                                  No data available
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <div
                      class="v-messages__wrapper"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <div
            class="flex xs12"
          >
            <div
              class="mb-2 text-uppercase grey--text font-weight-bold"
            >
              
            Tags
          
            </div>
             
            <div
              class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder theme--light"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-text-field__slot"
                  >
                    <input
                      placeholder="Type a tag and hit enter (autocomplete)"
                      type="text"
                    />
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <div
                      class="v-messages__wrapper"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <!---->
           
          <div
            class="flex xs4 pr-2"
          >
            <div
              class="mb-2 text-uppercase grey--text font-weight-bold"
            >
              
            Pos system
          
            </div>
             
            <div
              class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-select theme--light"
              role="combobox"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-select__slot"
                  >
                    <div
                      class="v-select__selections"
                    >
                      <input
                        aria-readonly="false"
                        autocomplete="on"
                        readonly="readonly"
                        type="text"
                      />
                    </div>
                    <div
                      class="v-input__append-inner"
                    >
                      <div
                        class="v-input__icon v-input__icon--append"
                      >
                        <i
                          aria-hidden="true"
                          class="v-icon material-icons theme--light"
                        >
                          arrow_drop_down
                        </i>
                      </div>
                    </div>
                  </div>
                  <div
                    class="v-menu"
                  >
                    <div
                      class="v-menu__content theme--light "
                      style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                    >
                      <div
                        class="v-select-list v-card theme--light"
                      >
                        <div
                          class="v-list theme--light"
                          role="list"
                        >
                          <div
                            role="listitem"
                          >
                            <div
                              class="v-list__tile theme--light"
                            >
                              <div
                                class="v-list__tile__content"
                              >
                                <div
                                  class="v-list__tile__title"
                                >
                                  No data available
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <div
                      class="v-messages__wrapper"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <div
            class="flex xs4 pr-2 pl-2"
          >
            <div
              class="mb-2 text-uppercase grey--text font-weight-bold d-flex justify-space-between position-relative"
              style="position: relative;"
            >
              <span>
                Business name
              </span>
               
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light"
                style="font-size: 16px; position: absolute; right: 0px;"
              >
                info
              </i>
              <span
                class="v-tooltip v-tooltip--top"
              >
                <div
                  class="v-tooltip__content"
                  style="left: 0px; max-width: auto; opacity: 0; top: 12px; z-index: 0; display: none;"
                >
                  
              This is the business name you entered for your fleet member on square
            
                </div>
              </span>
            </div>
             
            <div
              class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-select theme--light"
              role="combobox"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-select__slot"
                  >
                    <div
                      class="v-select__selections"
                    >
                      <input
                        aria-readonly="false"
                        autocomplete="on"
                        readonly="readonly"
                        type="text"
                      />
                    </div>
                    <div
                      class="v-input__append-inner"
                    >
                      <div
                        class="v-input__icon v-input__icon--append"
                      >
                        <i
                          aria-hidden="true"
                          class="v-icon material-icons theme--light"
                        >
                          arrow_drop_down
                        </i>
                      </div>
                    </div>
                  </div>
                  <div
                    class="v-menu"
                  >
                    <div
                      class="v-menu__content theme--light "
                      style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                    >
                      <div
                        class="v-select-list v-card theme--light"
                      >
                        <div
                          class="v-list theme--light"
                          role="list"
                        >
                          <div
                            role="listitem"
                          >
                            <div
                              class="v-list__tile theme--light"
                            >
                              <div
                                class="v-list__tile__content"
                              >
                                <div
                                  class="v-list__tile__title"
                                >
                                  No data available
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <div
                      class="v-messages__wrapper"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <div
            class="flex xs4 pl-2"
          >
            <div
              class="mb-2 text-uppercase grey--text font-weight-bold"
            >
              
            Size of the truck / trailer
          
            </div>
             
            <div
              class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder theme--light"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-text-field__slot"
                  >
                    <input
                      placeholder="input value"
                      type="text"
                    />
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <div
                      class="v-messages__wrapper"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <div
            class="flex xs12"
          >
            <div
              class="mb-2 text-uppercase grey--text font-weight-bold"
            >
              
            Owned by
          
            </div>
             
            <div
              class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline theme--light"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-text-field__slot"
                  >
                    <label
                      aria-hidden="true"
                      class="v-label theme--light"
                      style="left: 0px; position: absolute;"
                    >
                      Name
                    </label>
                    <input
                      aria-label="Name"
                      type="text"
                    />
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <div
                      class="v-messages__wrapper"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <div
            class="flex xs6 pr-2"
          >
            <div
              class="mb-2 text-uppercase grey--text font-weight-bold"
            >
              
            Contact phone
          
            </div>
             
            <div
              class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder theme--light"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-text-field__slot"
                  >
                    <input
                      placeholder="Phone"
                      type="text"
                    />
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <div
                      class="v-messages__wrapper"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <div
            class="flex xs6 pl-2"
          >
            <div
              class="mb-2 text-uppercase grey--text font-weight-bold"
            >
              
            State of incorporation
          
            </div>
             
            <div
              class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder theme--light"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-text-field__slot"
                  >
                    <input
                      placeholder="State"
                      type="text"
                    />
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <div
                      class="v-messages__wrapper"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <div
            class="flex xs6 pr-2"
          >
            <div
              class="mb-2 text-uppercase grey--text font-weight-bold"
            >
              
            Website
          
            </div>
             
            <div
              class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder theme--light"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-text-field__slot"
                  >
                    <input
                      placeholder="www.example.com"
                      type="text"
                    />
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <div
                      class="v-messages__wrapper"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <div
            class="flex xs6 pl-2"
          >
            <div
              class="mb-2 text-uppercase grey--text font-weight-bold"
            >
              
            Facebook
          
            </div>
             
            <div
              class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder theme--light"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-text-field__slot"
                  >
                    <input
                      placeholder="facebook account"
                      type="text"
                    />
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <div
                      class="v-messages__wrapper"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <div
            class="flex xs6 pr-2"
          >
            <div
              class="mb-2 text-uppercase grey--text font-weight-bold"
            >
              
            Twitter
          
            </div>
             
            <div
              class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder theme--light"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-text-field__slot"
                  >
                    <input
                      placeholder="Twitter account"
                      type="text"
                    />
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <div
                      class="v-messages__wrapper"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <div
            class="flex xs6 pl-2"
          >
            <div
              class="mb-2 text-uppercase grey--text font-weight-bold"
            >
              
            Instagram
          
            </div>
             
            <div
              class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder theme--light"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-text-field__slot"
                  >
                    <input
                      placeholder="Instagram account"
                      type="text"
                    />
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <div
                      class="v-messages__wrapper"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <div
            class="flex xs12"
          >
            <div
              class="mb-2 text-uppercase grey--text font-weight-bold"
            >
              
            Food fleet staff notes
          
            </div>
             
            <div
              class="v-input v-textarea v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder theme--light"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-text-field__slot"
                  >
                    <textarea
                      placeholder="Food fleet staff notes"
                      rows="5"
                    />
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <span
                      class="v-messages__wrapper"
                      name="message-transition"
                      tag="div"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
       
      <div
        class="flex xs4 pl-3"
      >
        <div
          class="px-2"
        >
          <div
            class="mb-2 text-uppercase grey--text font-weight-bold"
          >
            
          Truck / Trailer image
        
          </div>
           
          <div
            class="v-responsive v-image grey lighten-2"
          >
            <div
              class="v-responsive__sizer"
              style="padding-bottom: 58.82352941176471%;"
            />
            <div
              class="v-image__image v-image__image--preload v-image__image--cover"
              mode="in-out"
              name="fade-transition"
              style="background-image: url(https://picsum.photos/10/6?image=15); background-position: center center;"
            />
            <div
              class="v-responsive__content"
            />
          </div>
        </div>
         
        <div
          class="py-3 d-flex justify-space-between"
        >
          <button
            class="v-btn v-btn--depressed theme--light primary"
            type="button"
          >
            <div
              class="v-btn__content"
            >
              
          Upload Image
        
            </div>
          </button>
           
          <button
            class="v-btn v-btn--depressed theme--light"
            type="button"
          >
            <div
              class="v-btn__content"
            >
              
          Delete Image
        
            </div>
          </button>
        </div>
      </div>
    </div>
     
    <hr
      class="v-divider theme--light"
    />
     
    <div
      class="v-card__actions pa-3 d-flex justify-space-between"
    >
      <div>
        <button
          class="v-btn v-btn--depressed theme--light"
          type="button"
        >
          <div
            class="v-btn__content"
          >
            
        Cancel
      
          </div>
        </button>
         
        <button
          class="v-btn v-btn--depressed theme--light primary"
          type="button"
        >
          <div
            class="v-btn__content"
          >
            
        Save changes
      
          </div>
        </button>
      </div>
       
      <div
        style="text-align: right;"
      >
        <button
          class="v-btn v-btn--depressed theme--light"
          type="button"
        >
          <div
            class="v-btn__content"
          >
            
        Delete Fleet Member
      
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`flee-members/BasicInformation Snapshots WithData 1`] = `
<div
  class="container"
>
  <div
    class="v-card v-sheet theme--light"
  >
    <div
      class="v-card__title"
    >
      
    Basic Information
  
    </div>
     
    <hr
      class="v-divider theme--light"
    />
     
    <div
      class="layout pa-3"
    >
      <div
        class="flex xs8 pr-3"
      >
        <div
          class="layout row wrap"
        >
          <div
            class="flex xs9 pr-4"
          >
            <div
              class="mb-2 text-uppercase grey--text font-weight-bold"
            >
              
            Fleet member name
          
            </div>
             
            <div
              class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder v-input--is-label-active v-input--is-dirty theme--light"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-text-field__slot"
                  >
                    <input
                      placeholder="Name"
                      type="text"
                    />
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <div
                      class="v-messages__wrapper"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <div
            class="flex xs3"
          >
            <div
              class="mb-2 text-uppercase grey--text font-weight-bold"
            >
              
            Type
          
            </div>
             
            <div
              class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-select v-input--is-label-active v-input--is-dirty theme--light"
              role="combobox"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-select__slot"
                  >
                    <div
                      class="v-select__selections"
                    >
                      <div
                        class="v-select__selection v-select__selection--comma"
                      >
                        Mobile
                      </div>
                      <input
                        aria-readonly="false"
                        autocomplete="on"
                        readonly="readonly"
                        type="text"
                      />
                    </div>
                    <div
                      class="v-input__append-inner"
                    >
                      <div
                        class="v-input__icon v-input__icon--append"
                      >
                        <i
                          aria-hidden="true"
                          class="v-icon material-icons theme--light"
                        >
                          arrow_drop_down
                        </i>
                      </div>
                    </div>
                  </div>
                  <div
                    class="v-menu"
                  >
                    <div
                      class="v-menu__content theme--light "
                      style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                    >
                      <div
                        class="v-select-list v-card theme--light"
                      >
                        <div
                          class="v-list theme--light"
                          role="list"
                        >
                          <div
                            class="primary--text"
                            role="listitem"
                          >
                            <a
                              class="v-list__tile v-list__tile--link v-list__tile--active theme--light primary--text"
                            >
                              <div
                                class="v-list__tile__content"
                              >
                                <div
                                  class="v-list__tile__title"
                                >
                                  Mobile
                                </div>
                              </div>
                            </a>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <div
                      class="v-messages__wrapper"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <div
            class="flex xs12"
          >
            <div
              class="mb-2 text-uppercase grey--text font-weight-bold"
            >
              
            Tags
          
            </div>
             
            <div
              class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder theme--light"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-text-field__slot"
                  >
                    <input
                      placeholder="Type a tag and hit enter (autocomplete)"
                      type="text"
                    />
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <div
                      class="v-messages__wrapper"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <div
            class="flex xs12 pb-4"
          >
            <span
              class="v-chip v-chip--removable theme--light orange"
              tabindex="0"
            >
              <span
                class="v-chip__content"
              >
                
            ASIAN
          
                <div
                  class="v-chip__close"
                >
                  <i
                    aria-hidden="true"
                    class="v-icon material-icons theme--light"
                  >
                    cancel
                  </i>
                </div>
              </span>
            </span>
            <span
              class="v-chip v-chip--removable theme--light orange"
              tabindex="0"
            >
              <span
                class="v-chip__content"
              >
                
            VEGAN
          
                <div
                  class="v-chip__close"
                >
                  <i
                    aria-hidden="true"
                    class="v-icon material-icons theme--light"
                  >
                    cancel
                  </i>
                </div>
              </span>
            </span>
          </div>
           
          <div
            class="flex xs4 pr-2"
          >
            <div
              class="mb-2 text-uppercase grey--text font-weight-bold"
            >
              
            Pos system
          
            </div>
             
            <div
              class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-select v-input--is-label-active v-input--is-dirty theme--light"
              role="combobox"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-select__slot"
                  >
                    <div
                      class="v-select__selections"
                    >
                      <div
                        class="v-select__selection v-select__selection--comma"
                      >
                        Square
                      </div>
                      <input
                        aria-readonly="false"
                        autocomplete="on"
                        readonly="readonly"
                        type="text"
                      />
                    </div>
                    <div
                      class="v-input__append-inner"
                    >
                      <div
                        class="v-input__icon v-input__icon--append"
                      >
                        <i
                          aria-hidden="true"
                          class="v-icon material-icons theme--light"
                        >
                          arrow_drop_down
                        </i>
                      </div>
                    </div>
                  </div>
                  <div
                    class="v-menu"
                  >
                    <div
                      class="v-menu__content theme--light "
                      style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                    >
                      <div
                        class="v-select-list v-card theme--light"
                      >
                        <div
                          class="v-list theme--light"
                          role="list"
                        >
                          <div
                            class="primary--text"
                            role="listitem"
                          >
                            <a
                              class="v-list__tile v-list__tile--link v-list__tile--active theme--light primary--text"
                            >
                              <div
                                class="v-list__tile__content"
                              >
                                <div
                                  class="v-list__tile__title"
                                >
                                  Square
                                </div>
                              </div>
                            </a>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <div
                      class="v-messages__wrapper"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <div
            class="flex xs4 pr-2 pl-2"
          >
            <div
              class="mb-2 text-uppercase grey--text font-weight-bold d-flex justify-space-between position-relative"
              style="position: relative;"
            >
              <span>
                Business name
              </span>
               
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light"
                style="font-size: 16px; position: absolute; right: 0px;"
              >
                info
              </i>
              <span
                class="v-tooltip v-tooltip--top"
              >
                <div
                  class="v-tooltip__content"
                  style="left: 0px; max-width: auto; opacity: 0; top: 12px; z-index: 0; display: none;"
                >
                  
              This is the business name you entered for your fleet member on square
            
                </div>
              </span>
            </div>
             
            <div
              class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-select theme--light"
              role="combobox"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-select__slot"
                  >
                    <div
                      class="v-select__selections"
                    >
                      <input
                        aria-readonly="false"
                        autocomplete="on"
                        readonly="readonly"
                        type="text"
                      />
                    </div>
                    <div
                      class="v-input__append-inner"
                    >
                      <div
                        class="v-input__icon v-input__icon--append"
                      >
                        <i
                          aria-hidden="true"
                          class="v-icon material-icons theme--light"
                        >
                          arrow_drop_down
                        </i>
                      </div>
                    </div>
                  </div>
                  <div
                    class="v-menu"
                  >
                    <div
                      class="v-menu__content theme--light "
                      style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                    >
                      <div
                        class="v-select-list v-card theme--light"
                      >
                        <div
                          class="v-list theme--light"
                          role="list"
                        >
                          <div
                            role="listitem"
                          >
                            <div
                              class="v-list__tile theme--light"
                            >
                              <div
                                class="v-list__tile__content"
                              >
                                <div
                                  class="v-list__tile__title"
                                >
                                  No data available
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <div
                      class="v-messages__wrapper"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <div
            class="flex xs4 pl-2"
          >
            <div
              class="mb-2 text-uppercase grey--text font-weight-bold"
            >
              
            Size of the truck / trailer
          
            </div>
             
            <div
              class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder theme--light"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-text-field__slot"
                  >
                    <input
                      placeholder="input value"
                      type="text"
                    />
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <div
                      class="v-messages__wrapper"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <div
            class="flex xs12"
          >
            <div
              class="mb-2 text-uppercase grey--text font-weight-bold"
            >
              
            Owned by
          
            </div>
             
            <div
              class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-input--is-label-active v-input--is-dirty theme--light"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-text-field__slot"
                  >
                    <input
                      aria-label="Name"
                      type="text"
                    />
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <div
                      class="v-messages__wrapper"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <div
            class="flex xs6 pr-2"
          >
            <div
              class="mb-2 text-uppercase grey--text font-weight-bold"
            >
              
            Contact phone
          
            </div>
             
            <div
              class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder v-input--is-label-active v-input--is-dirty theme--light"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-text-field__slot"
                  >
                    <input
                      placeholder="Phone"
                      type="text"
                    />
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <div
                      class="v-messages__wrapper"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <div
            class="flex xs6 pl-2"
          >
            <div
              class="mb-2 text-uppercase grey--text font-weight-bold"
            >
              
            State of incorporation
          
            </div>
             
            <div
              class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder v-input--is-label-active v-input--is-dirty theme--light"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-text-field__slot"
                  >
                    <input
                      placeholder="State"
                      type="text"
                    />
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <div
                      class="v-messages__wrapper"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <div
            class="flex xs6 pr-2"
          >
            <div
              class="mb-2 text-uppercase grey--text font-weight-bold"
            >
              
            Website
          
            </div>
             
            <div
              class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder v-input--is-label-active v-input--is-dirty theme--light"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-text-field__slot"
                  >
                    <input
                      placeholder="www.example.com"
                      type="text"
                    />
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <div
                      class="v-messages__wrapper"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <div
            class="flex xs6 pl-2"
          >
            <div
              class="mb-2 text-uppercase grey--text font-weight-bold"
            >
              
            Facebook
          
            </div>
             
            <div
              class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder v-input--is-label-active v-input--is-dirty theme--light"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-text-field__slot"
                  >
                    <input
                      placeholder="facebook account"
                      type="text"
                    />
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <div
                      class="v-messages__wrapper"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <div
            class="flex xs6 pr-2"
          >
            <div
              class="mb-2 text-uppercase grey--text font-weight-bold"
            >
              
            Twitter
          
            </div>
             
            <div
              class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder v-input--is-label-active v-input--is-dirty theme--light"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-text-field__slot"
                  >
                    <input
                      placeholder="Twitter account"
                      type="text"
                    />
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <div
                      class="v-messages__wrapper"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <div
            class="flex xs6 pl-2"
          >
            <div
              class="mb-2 text-uppercase grey--text font-weight-bold"
            >
              
            Instagram
          
            </div>
             
            <div
              class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder v-input--is-label-active v-input--is-dirty theme--light"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-text-field__slot"
                  >
                    <input
                      placeholder="Instagram account"
                      type="text"
                    />
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <div
                      class="v-messages__wrapper"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <div
            class="flex xs12"
          >
            <div
              class="mb-2 text-uppercase grey--text font-weight-bold"
            >
              
            Food fleet staff notes
          
            </div>
             
            <div
              class="v-input v-textarea v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder v-input--is-label-active v-input--is-dirty theme--light"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-text-field__slot"
                  >
                    <textarea
                      placeholder="Food fleet staff notes"
                      rows="5"
                    />
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <span
                      class="v-messages__wrapper"
                      name="message-transition"
                      tag="div"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
       
      <div
        class="flex xs4 pl-3"
      >
        <div
          class="px-2"
        >
          <div
            class="mb-2 text-uppercase grey--text font-weight-bold"
          >
            
          Truck / Trailer image
        
          </div>
           
          <div
            class="v-responsive v-image grey lighten-2"
          >
            <div
              class="v-responsive__sizer"
              style="padding-bottom: 58.82352941176471%;"
            />
            <div
              class="v-image__image v-image__image--preload v-image__image--cover"
              mode="in-out"
              name="fade-transition"
              style="background-image: url(https://picsum.photos/10/6?image=15); background-position: center center;"
            />
            <div
              class="v-responsive__content"
            />
          </div>
        </div>
         
        <div
          class="py-3 d-flex justify-space-between"
        >
          <button
            class="v-btn v-btn--depressed theme--light primary"
            type="button"
          >
            <div
              class="v-btn__content"
            >
              
          Upload Image
        
            </div>
          </button>
           
          <button
            class="v-btn v-btn--depressed theme--light"
            type="button"
          >
            <div
              class="v-btn__content"
            >
              
          Delete Image
        
            </div>
          </button>
        </div>
      </div>
    </div>
     
    <hr
      class="v-divider theme--light"
    />
     
    <div
      class="v-card__actions pa-3 d-flex justify-space-between"
    >
      <div>
        <button
          class="v-btn v-btn--depressed theme--light"
          type="button"
        >
          <div
            class="v-btn__content"
          >
            
        Cancel
      
          </div>
        </button>
         
        <button
          class="v-btn v-btn--depressed theme--light primary"
          type="button"
        >
          <div
            class="v-btn__content"
          >
            
        Save changes
      
          </div>
        </button>
      </div>
       
      <div
        style="text-align: right;"
      >
        <button
          class="v-btn v-btn--depressed theme--light"
          type="button"
        >
          <div
            class="v-btn__content"
          >
            
        Delete Fleet Member
      
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;
